--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html5>
     <head>
-        <<title>dawon folding</title>
+        <title>dawon folding</title>
     </head>
     <<body>
         test
